// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders error state 1`] = `
Array [
  <div
    className="text-input"
    disabled={false}
    onChange={[Function]}
    required={false}
  />,
  <div
    className="warning"
    iconColor="negative"
  >
    Could not fetch forms from Typeform. Received the following error: ain't working
  </div>,
]
`;

exports[`App renders error state with previous value 1`] = `
Array [
  <div
    className="text-input"
    disabled={false}
    onChange={[Function]}
    required={false}
    value="https://cf-exts.typeform.com/to/ABCDEF"
  />,
  <div
    className="warning"
    iconColor="negative"
  >
    Could not fetch forms from Typeform. Received the following error: ain't working
  </div>,
]
`;

exports[`App renders error state with the field being required 1`] = `
Array [
  <div
    className="text-input"
    disabled={false}
    onChange={[Function]}
    required={true}
  />,
  <div
    className="warning"
    iconColor="negative"
  >
    Could not fetch forms from Typeform. Received the following error: ain't working
  </div>,
]
`;

exports[`App renders loading state 1`] = `null`;

exports[`App renders with forms 1`] = `
<div
  className="select"
  disabled={false}
  onChange={[Function]}
  required={false}
>
  <div
    className="option"
    value=""
  >
    Choose a typeform
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/123"
  >
    First form
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/345"
  >
    Second form
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/678"
  >
    Third form
  </div>
</div>
`;

exports[`App renders with forms and being required 1`] = `
<div
  className="select"
  disabled={false}
  onChange={[Function]}
  required={true}
>
  <div
    className="option"
    value=""
  >
    Choose a typeform
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/123"
  >
    First form
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/345"
  >
    Second form
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/678"
  >
    Third form
  </div>
</div>
`;

exports[`App renders with forms and no longer existing previous value 1`] = `
Array [
  <div
    className="warning"
  >
    The form you have selected in Contentful no longer exists in Typeform.
  </div>,
  <div
    className="select"
    disabled={false}
    onChange={[Function]}
    required={true}
    value="https://cf-exts.typeform.com/to/234"
  >
    <div
      className="option"
      value=""
    >
      Choose a typeform
    </div>
    <div
      className="option"
      value="https://cf-exts.typeform.com/to/234"
    >
      Previous value (no longer exists in Typeform)
    </div>
    <div
      className="option"
      value="https://cf-exts.typeform.com/to/123"
    >
      First form
    </div>
    <div
      className="option"
      value="https://cf-exts.typeform.com/to/345"
    >
      Second form
    </div>
    <div
      className="option"
      value="https://cf-exts.typeform.com/to/678"
    >
      Third form
    </div>
  </div>,
]
`;

exports[`App renders with forms and previous value 1`] = `
<div
  className="select"
  disabled={false}
  onChange={[Function]}
  required={true}
  value="https://cf-exts.typeform.com/to/123"
>
  <div
    className="option"
    value=""
  >
    Choose a typeform
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/123"
  >
    First form
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/345"
  >
    Second form
  </div>
  <div
    className="option"
    value="https://cf-exts.typeform.com/to/678"
  >
    Third form
  </div>
</div>
`;
